--- a/src/output/style.css
+++ b/src/output/style.css
@@ -28,44 +28,22 @@ body {
 
 header {
   text-align: center;
-  margin-bottom: 20px;
 }
 
 h1 {
-  font-size: 24px;
   font-weight: bold;
-  margin-bottom: 10px;
 }
 
-/* Team member styles */
-.team-member {
-  background-color: #fff;
+/* Team card styles */
+
+.employee-card {
+  background-color: var(--background);
   border-radius: 5px;
-  padding: 20px;
-  margin-bottom: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 1rem;
+  text-align: center;
 }
 
-.team-member h2 {
-  font-size: 18px;
-  font-weight: bold;
-  color: #333;
-  margin-bottom: 10px;
-}
-
-.team-member p {
-  font-size: 14px;
-  color: #666;
-  margin-bottom: 5px;
-}
-
-.team-member .role {
-  font-weight: bold;
-}
-
-.team-member .email {
-  color: #999;
-}
 
 /* Footer styles */
 footer {
