--- a/src/output/style.css
+++ b/src/output/style.css
@@ -8,7 +8,7 @@
 /* COLOUR PALETTE */
 :root {
   --primary-colour: #5B84B1FF;
-  --accent-colour: #FC766AFF;
+  --accent-colour: rgb(199, 89, 79);
   --background: #F0F0F0FF;
   --primary-text: #333333FF;
   --secondary-text: #666666FF;
@@ -34,6 +34,7 @@ h1 {
   font-weight: bold;
 }
 
+
 /* Team card styles */
 
 .employee-card {
@@ -42,16 +43,24 @@ h1 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 1rem;
   text-align: center;
+  color: var(--primary-text);
+}
+
+.card-header {
+  background-color: var(--accent-colour);
+  color: var(--background);
 }
 
 
 /* Footer styles */
 footer {
+  width: 100%;
   text-align: center;
   margin-top: 20px;
 }
 
 footer p {
+  text-align: center;
   font-size: 12px;
   color: #999;
 }
